# rust-node

./: Cargo.toml  README.md  implementation_roadmap.md  memory  service_registry_redesign.md
.cargo/: config.toml
.github/workflows/: ci.yml  security-audit.yml
benches/: README.md  node_benchmarks.rs
benchmarks/: node_api_tests_log.txt  p2p_tests_log.txt  pub_sub_tests_log.txt  sqlite_mixin_tests_log.txt
coverage/: tarpaulin-report.html
docs/: path-parameters.md
examples/: node_tester.rs  simple_node_discovery.rs
node_ui/: index.html
node_ui/assets/: index-BoeqRpaS.js
scripts/: coverage.sh
setup_ui/: index.html
setup_ui/css/: index.css
setup_ui/js/: index.js
src/: anonymous_subscriber.rs  cli.rs  config.rs  db.rs  init.rs  ipc.rs  key_management.rs  lib.rs  main.rs  node.rs  node_refactoring_plan.md  peer.rs  registry.rs  remote.rs  server.rs  service.rs  vmap_macros.rs  web.rs
src/config/: logging_config.rs  mod.rs
src/network/: capabilities.rs  mod.rs  network_config.rs
src/p2p/: crypto.rs  dht.rs  discovery.rs  mod.rs  peer.rs  peer_id_convert.rs  qr.rs  service.rs  stun.rs  tests.rs  transport.rs
src/routing/: mod.rs  path_registry.rs  path_utils.rs  topic_path.rs
src/services/: abstract_service.rs  anonymous_subscriber.rs  distributed_registry.rs  error_handling_demo.rs  event_context.rs  load_balancing.rs  manager.rs  mod.rs  node_info.rs  path_processor.rs  registry_info.rs  registry_service.rs  remote.rs  remote_service.rs  request_context.rs  request_context_mod.rs  service_registry.rs  sqlite.rs  utils.rs
src/tests/: mod.rs  network_tests.rs  service_info_test.rs  service_tests.rs  value_type_tests.rs
src/util/: logging.rs  mod.rs
standalone_discovery/: Cargo.toml
tests/: direct_event_service_test.rs  error_handling_test.rs  integration_tests.rs  logging_test.rs  mod.rs  modern_node_api_tests.rs  network_standalone_test.rs  node_api_tests.rs  p2p_services_test.rs  p2p_tests.rs  pub_sub_macros_test.rs  simple_actions.rs  simple_events.rs  sqlite_mixin_tests.rs  subscription_logger.rs  value_type_tests.rs  vmap.rs  vmap_test.rs
tests/core/: enhanced_registry_benchmark.rs  enhanced_registry_test.rs  event_metadata_test.rs  mod.rs  node_test.rs  path_trie_test.rs  registry_service_test.rs  service_registry_get_local_services_test.rs  service_registry_test.rs  simple_service.rs  topic_path_template_test.rs  topic_path_test.rs  topic_path_wildcard_test.rs
tests/fixtures/: README.md  base_station_service.rs  math_service.rs  mod.rs  network_mocks.rs  path_params_service.rs  ship_service.rs
tests/integration/: mod.rs  node_network.rs
(+65 files in other folders)
