[package]
name = "runar_node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"

# Local dependencies
runar_common = { path = "../rust-common" }

# Network dependencies
quinn = "0.10.1"
socket2 = "0.5.3"
rustls = { version = "0.21.0", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.3"
rcgen = "0.11.1"
bincode = "1.3.3"
futures-util = "0.3.28"
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }

# For the example
tokio-stream = "0.1.14"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.9.0"

[[bench]]
name = "node_benchmarks"
harness = false
