[package]
name = "runar_node"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5"
arc-swap = "1.6"
anyhow = "1.0"
async-trait = { workspace = true }
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
thiserror = "1.0"
env_logger = "0.10"
chrono = "0.4"
rand = "0.9.0"

# Local dependencies
runar_common = { path = "../rust-common" }

# Network dependencies
quinn = "0.10.1"
bytes = "1.4.0"
socket2 = "0.5.3"
rustls = { version = "0.21.0", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.3"
rustls-native-certs = "0.6.2"
rcgen = "0.11.1"
bincode = "1.3.3"
futures-util = "0.3.28"
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }
webpki-roots = "0.25.0"  # For system root certificates

# For the example
tokio-stream = "0.1.14"
ring = { version = "0.17.14", features = ["std"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }


